# python-project-49

./: Makefile  README.md  demo.cast  pyproject.toml
brain_games/: cli.py  game_engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/games/scripts/: brain_game.py  calc_script.py  even_script.py  gcd_script.py  prime_script.py  progression_script.py
brain_games/scripts/: brain_even.py  brain_games.py  calc_launch.py  calc_script.py  even_script.py  gcd_launch.py  gcd_script.py  prime_launch.py  prime_script.py  progression_script.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  main_file.py  say_hello.py
