[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A learning project consisting of five math games."
authors = ["Elena Kalevich <ziggy.taren.44@gmail.com>"]
readme = "README.md"
repository = "https://github.com/TarenTheHandsome/python-project-49"
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Environment :: MacOS Monterey",
    "Environment :: Console",
    "Development Status :: 3 - Alpha",
    "Framework :: Flake8",
    "License :: Free for non-commercial use",
    "Natural Language :: Russian",
  ]


[tool.poetry.scripts]
brain-games = "brain_games.games.scripts.brain_game:main"
brain-even = "brain_games.games.scripts.even_script:main"
brain-calc = "brain_games.games.scripts.calc_script:main"
brain-gcd = "brain_games.games.scripts.gcd_script:main"
brain-progression = "brain_games.games.scripts.progression_script:main"
brain-prime = "brain_games.games.scripts.prime_script:main"


[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
